k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: outlook-plugin-svc
  namespace: epfl-chatbot
spec:
  selector:
    app: outlook-plugin
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
